--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {background-color:black;
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 
@@ -12,6 +12,7 @@ img {
     border-radius: 20px;
     width: 320px;
     height: 320px;
+    border: 1px solid forestgreen;
 }
 
 h1 {
@@ -34,12 +35,17 @@ li {
 }
 
 a {
-    background-color: limegreen;
+    background-color: forestgreen;
     color: white;
     padding: 15px;
     text-decoration: none;
     display: block;
     border-radius: 5px;  
+}
+
+a:hover {
+    background-color: limegreen;
+    color:green;
 }
 
 footer {
