--- a/style.css
+++ b/style.css
@@ -1,164 +1,62 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+}
+
+body {background-color:black;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+img {
+    border-radius: 20px;
+    width: 320px;
+    height: 320px;
+    border: 1px solid forestgreen;
+}
+
+h1 {
+    color: white;
+    margin-top: 31px;
+    margin-bottom: 8px;
+}
+
+p {
+    color: white;
+}
+
+ul {
+    margin-top: 35px;
+}
+
+li {
+    margin-bottom: 18px;
+    list-style: none;
+}
+
+a {
+    background-color: forestgreen;
+    color: white;
+    padding: 15px;
+    text-decoration: none;
+    display: block;
+    border-radius: 5px;  
+}
+
+a:hover {
+    background-color: limegreen;
+    color:green;
+}
+
+footer {
+    color: white;
 }
 
 .container {
-    
-}
+width: 320px;
+text-align: center;
+margin-top: 41px;
+margin-left: auto;
+margin-right: auto;
 
-.information-column {
-    padding: 40px;
-    background-color: #000;
-    color: #fff;
-    text-align: center;
-}
-.information-column hr {
-    border: none;
-    border: 1px solid green;
-    margin-top: 18px;
-}
-
-.information-column img {
-    width: 300px;
-    height: 300px;
-    border-radius: 50%; 
-    border: 1px solid green;
-    margin-bottom: 18px;
-}
-
-.information-column h3 {
-    text-align: left;
-    margin-top: 20px;
-}
-
-.information-column ul {
-    list-style-type: none;
-}
-
-.information-column li {
-    text-align: left;
-    margin: 10px 0;
-}
-
-.contact-description a {
-    text-decoration: none;
-    color: #fff;
-}
-
-.contact-description i {
-    color: green;
-    margin-right: 14px;
-}
-
-.education-description {
-    margin-top: 32px;
-}
-
-.education-description p {
-    color: green;
-}
-
-.language-description {
-    margin-top: 24px;
-}
-
-.language-description h4 {
-    margin-top: 3px;
-    margin-bottom: 4px;
-}
-
-.progress-bar-1{
-    --progress: 100;
-    height: 8px;
-    padding: 1px;
-    background-color: darkred;
-    display: flex;
-  }
-  
-  .progress-bar-1::before{
-    content: "";
-    width: calc(var(--progress) * 1%);
-    background-color: limegreen;
-  }
-
-  .progress-bar-2{
-    --progress: 85;
-    height: 8px;
-    padding: 1px;
-    background-color: darkred;
-    display: flex;
-  }
-  
-  .progress-bar-2::before{
-    content: "";
-    width: calc(var(--progress) * 1%);
-    background-color: limegreen;
-  }
-
-  .progress-bar-3{
-    --progress: 10;
-    height: 8px;
-    padding: 1px;
-    background-color: darkred;
-    display: flex;
-  }
-  
-  .progress-bar-3::before{
-    content: "";
-    width: calc(var(--progress) * 1%);
-    background-color: limegreen;
-  }
-  
-  .experiences-column {
-    padding: 40px;
-    background-color: white;
-    color: black;
-    text-align: left;
-  }
-  
-  .experiences-column section {
-    margin-bottom: 30px;
-  }
-
-  .experiences-column h2 {
-    text-align: left;
-    margin-bottom: 15px;    
-}
-
-.experiences-column ul {
-    list-style-type: none;
-}
-
-.experiences-column a {
-    text-decoration: underline;
-    color: #000;
-}
-
-.experience {
-    margin-bottom: 15px;
-}
-footer {
-    color: darkgreen;
-}
-
-@media (min-width: 992px) {
-    .container {
-        display: flex;
-    }
-    .information-column img {
-        width: 250px;
-        height: 250px;
-    }
-
-    .experiences-column .experience {
-        display: flex;
-    }
-    .experience-date {
-        width: 500px;
-    }
 }
